--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -2,8 +2,11 @@ ul{
 	list-style-type: none;
 	margin:0;
 	padding:0;
-	background-color: grey;
 	position:fixed;
 	top:0;
 	width:100%;
+}
+
+#navigation{
+	float:right;
 }
