img blur (background for search bar)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,3 +5,19 @@ h4 {
 	color: #1a0dab;
 	font-family: Verdana;
 }
+
+p {
+	color: orange;
+}
+
+li {
+	color: green;
+}
+
+img:nth-child(3){
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -ms-filter: blur(3px);
+  -o-filter: blur(3px);
+  filter: blur(3px);
+}
