commented out blur for later use

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,10 +14,10 @@ li {
 	color: green;
 }
 
-img:nth-child(3){
+/* img:nth-child(3){
   -webkit-filter: blur(3px);
   -moz-filter: blur(3px);
   -ms-filter: blur(3px);
   -o-filter: blur(3px);
   filter: blur(3px);
-}
+} */
