Commented out navigation attributes for editing

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -1,4 +1,4 @@
-/*Button Style*/
+/*Button Style
 .button{
 	background-color: #09092a;
 	color: white;
@@ -9,12 +9,12 @@
 	float:right;
 	margin-left: 800px;
 }
-/*Position of Dropdown Content*/
+Position of Dropdown Content
 .navigation{
 	position:relative;
 	display:inline-block;
 }
-/*Content*/
+Content
 .pages{
 	display:none;
 	position:absolute;
@@ -22,21 +22,21 @@
 	min-width:160px;
 	box-shadow:0px 8px 16px 0px rgba(0, 0, 0,0.2);
 }
-/*Dropdown Links*/
+Dropdown Links
 .pages a{
 	color:black;
 	padding:12px 16px;
 	text-decoration:none;
 	display:block;
 }
-/*Dropdown Hover Links Color*/
+Dropdown Hover Links Color
 .pages a:hover {background-color: #f1f1f1}
 
-/*Show Dropdown Menu on Hover*/
+Show Dropdown Menu on Hover
 .navigation:hover .pages{
 	display:block;
 }
-/*Background Color of Dropdown Menu*/
+Background Color of Dropdown Menu
 .navigation:hover .button{
 	background-color:#191970;
-}
+}*/
