Altered styling of navigation

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -1,5 +1,5 @@
 button{
-	background-color: #4CAF50;
+	background-color: #0d0d3f;
 	border:none;
 	color:white;
 	padding:15px 32px;
@@ -9,4 +9,9 @@ button{
 	font-size:16px;
 	margin:4px 2px;
 	cursor:pointer;
+	float:right;
+}
+
+a{
+	text-decoration:none;
 }
