--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,6 +14,13 @@ li {
 	color: green;
 }
 
+img{
+	max-width:100%;
+}
+
+body{
+	width:100%;
+}
 /* img:nth-child(3){
   -webkit-filter: blur(3px);
   -moz-filter: blur(3px);
