--- a/stylesheets/liveTiles.css
+++ b/stylesheets/liveTiles.css
@@ -1,10 +1,9 @@
 /*------PARAGRAPH------*/
 .container li p {
-  color: transparent;
+  color: orange;
   background: transparent;
-  font: 30/15px 'Arvo', Helvetica, Arial, sans-serif;
+  font: 30/15px "Times New Roman", Helvetica, Arial, sans-serif;
   text-align: center;
-  text-transform: uppercase;
   
   position: relative;
   top: 100;
