--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -36,6 +36,10 @@ input[type=text]{
 input[type=text]:focus{
 	width:100%;
 }
+
+ul {
+	list-style: none;
+}
 /* img:nth-child(3){
   -webkit-filter: blur(3px);
   -moz-filter: blur(3px);
