--- a/stylesheets/liveTiles.css
+++ b/stylesheets/liveTiles.css
@@ -5,7 +5,7 @@
   font: 30/15px "Times New Roman", Helvetica, Arial, sans-serif;
   text-align: center;
   
-  position: relative;
+  position: absolute;
   top: 100;
   left: 0;
   width: 400px;
@@ -36,7 +36,7 @@
 .container li:hover img {
   /* flip transition */
    -webkit-transform: scale(-1, 1);
-   z-index: -3;
+   z-index: 1;
    -moz-transform: scale(-1, 1);
    -o-transform: scale(-1, 1);
 }
