--- a/stylesheets/liveTiles.css
+++ b/stylesheets/liveTiles.css
@@ -1,5 +1,5 @@
 /*------PARAGRAPH------*/
-.container li p {
+/*.container li p {
   color: orange;
   background: transparent;
   font: 30/15px "Times New Roman", Helvetica, Arial, sans-serif;
@@ -12,20 +12,20 @@
   height: 250px; 
 }
 
-.container li:hover p {
+/*.container li:hover p {
   /* text color */
-    color: grey;
+/*    color: grey;
   /* background color */
-    background: rgba(0,0,0,0.7);
+  /*  background: rgba(0,0,0,0.7);
   z-index: 1;
 }
 
 /*------IMAGES------*/
-.container img {
+/*.container img {
   width: 400px;
   height: 250px;
   /* flip transition */
-   -webkit-transition: all 0.7s ease;
+ /*  -webkit-transition: all 0.7s ease;
    -moz-transition: all 0.7s ease;
    -o-transition: all 0.7s ease;
    -ms-transition: all 0.7s ease;
@@ -33,9 +33,9 @@
 
 }
 
-.container li:hover img {
+/*.container li:hover img {
   /* flip transition */
-   -webkit-transform: scale(-1, 1);
+/*   -webkit-transform: scale(-1, 1);
    z-index: 1;
    -moz-transform: scale(-1, 1);
    -o-transform: scale(-1, 1);
