--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -47,3 +47,11 @@ ul {
   -o-filter: blur(3px);
   filter: blur(3px);
 } */
+
+footer {
+	background-color: #182642;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+}
