--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -47,6 +47,22 @@ ul {
   -o-filter: blur(3px);
   filter: blur(3px);
 } */
+.jumbotron {
+	background-image:url('http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg'); 	<img src="" height="600px" width="1425px" align="middle"/>
+	padding: 20%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 1425px;
+	margin-top: -40px;
+	background-attachment: fixed;
+	background-position:  center -238px;
+}
+.jumbotron h1 {
+	position: absolute;
+	top:18;
+	left:0;
+	padding-left: 20px;
+	color: grey;
 
 footer {
 	background-color: #182642;
