--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,6 +45,7 @@ ul {
 	padding-left: 20px;
 	color: white;
 	text-align: center;
+	font-family:Verdana;
 }
 
 
@@ -55,4 +56,5 @@ footer {
 	padding-right: 10px;
 	padding-bottom: 10px;
 	text-align:center;
+	font-family:Verdana;
 }
