--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,8 @@
 h2 {
-	font-family: Helvetica;
-}
-h4 {
-	color: #1a0dab;
 	font-family: Verdana;
+	color:#182642;
 }
+
 
 p {
 	color: orange;
@@ -59,4 +57,20 @@ footer {
 	padding-bottom: 10px;
 	text-align:center;
 	font-family:Verdana;
+}
+
+.mission {
+	background-color: #182642;
+	color: #F7FAFE;
+	margin-top: -30px;	
+}
+.mission h3 {
+	font-family:Verdana;
+	padding: 5% 10% ;
+	text-align: center;
+	position: center;
+}
+
+strong{
+	color:orange;
 }
