--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -29,11 +29,11 @@ ul {
 }
 
 .jumbotron {
-	background-image:url('http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg');
+	background-image:url('../images/WP_20160627_11_22_03_Pro (2).jpg');
 	padding: 20%;
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 1440px;
+	width: 100%;
 	height:600px;
 	margin-top: -40px;
 	background-attachment: fixed;
