--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,7 +32,7 @@ ul {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	height:600px;
+	height:auto;
 	margin-top: -40px;
 	background-attachment: fixed;
 	background-position:  center -238px;
